cpp/test/Slice/errorDetection/RedefinitionAsDataMember.err
RedefinitionAsDataMember.ice:14 error: redefinition of `operation' as data member
