cpp/test/Slice/errorDetection/RedefinitionAsDataMember.ice
// **********************************************************************
//
// Copyright (c) 2001
// Mutable Realms, Inc.
// Huntsville, AL, USA
//
// All Rights Reserved
//
// **********************************************************************

class C
{
    void operation();
    int operation;
    long l;
};
